--- a/references.bib
+++ b/references.bib
@@ -341,10 +341,45 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Cane et al_2012_Validation of the theoretical domains framework for use in behaviour change and.pdf}
 }
 
+@article{carpSecretLivesExperiments2012,
+  title = {The Secret Lives of Experiments: Methods Reporting in the {{fMRI}} Literature},
+  shorttitle = {The Secret Lives of Experiments},
+  author = {Carp, Joshua},
+  year = {2012},
+  month = oct,
+  journal = {NeuroImage},
+  volume = {63},
+  number = {1},
+  pages = {289--300},
+  issn = {1095-9572},
+  doi = {10.1016/j.neuroimage.2012.07.004},
+  abstract = {Replication of research findings is critical to the progress of scientific understanding. Accordingly, most scientific journals require authors to report experimental procedures in sufficient detail for independent researchers to replicate their work. To what extent do research reports in the functional neuroimaging literature live up to this standard? The present study evaluated methods reporting and methodological choices across 241 recent fMRI articles. Many studies did not report critical methodological details with regard to experimental design, data acquisition, and analysis. Further, many studies were underpowered to detect any but the largest statistical effects. Finally, data collection and analysis methods were highly flexible across studies, with nearly as many unique analysis pipelines as there were studies in the sample. Because the rate of false positive results is thought to increase with the flexibility of experimental designs, the field of functional neuroimaging may be particularly vulnerable to false positives. In sum, the present study documented significant gaps in methods reporting among fMRI studies. Improved methodological descriptions in research reports would yield significant benefits for the field.},
+  langid = {english},
+  pmid = {22796459},
+  keywords = {Biomedical Research,Brain Mapping,Humans,Knowledge Discovery,Magnetic Resonance Imaging,Periodicals as Topic,Reproducibility of Results,Sensitivity and Specificity}
+}
+
 @phdthesis{carvalhoParticipatoryDesignBehaviour2020,
   title = {Participatory {{Design}} for {{Behaviour Change}}: {{An Integrative Approach}} to {{Improving Healthcare Practice Focused}} on {{Staff Participation}}},
   author = {Carvalho, Fernando},
   year = {2020}
+}
+
+@article{caulleyCitationImpactWas2020,
+  title = {Citation Impact Was Highly Variable for Reporting Guidelines of Health Research: A Citation Analysis},
+  shorttitle = {Citation Impact Was Highly Variable for Reporting Guidelines of Health Research},
+  author = {Caulley, Lisa and Cheng, Wei and {Catal{\'a}-L{\'o}pez}, Ferr{\'a}n and Whelan, Jonathan and Khoury, Michel and Ferraro, Jennifer and Husereau, Don and Altman, Douglas G. and Moher, David},
+  year = {2020},
+  month = nov,
+  journal = {Journal of Clinical Epidemiology},
+  volume = {127},
+  pages = {96--104},
+  issn = {0895-4356},
+  doi = {10.1016/j.jclinepi.2020.07.013},
+  urldate = {2023-09-19},
+  abstract = {Objectives Over 400 reporting guidelines are currently published, but the frequency of their use by authors to accurately and transparently report research remains unclear. This study examined citation counts of reporting guidelines and characteristics contributing to their citation impact. Study Design and Setting Web of Science database was searched for citation counts of all reporting guidelines with a minimum citation age of 5~years. The total citation impact, mean citation impact and the factors contributing to 2- and 5-year citation rate were established. Results The search identified 296 articles of reporting guidelines from 1995 to 2013. The mean citations per year was 32.4 (95\% confidence interval, 22.3\textendash 42.4 citations). The factors associated with 2- and 5-year citation performance of reporting guidelines included the following: open access to the reporting guideline, field of the publishing journal (general vs. specialized medical journal), impact factor of the publishing journal, simultaneous publication in multiple journals, and a male first author. Conclusion The citation rate across reporting guidelines varied with journal impact factor, open access publication, field of the publishing journal, simultaneous publications, and a male first author. Gaps in citations highlight opportunities to increase visibility and encourage author use of reporting guidelines.},
+  keywords = {Citation analysis,Citation impact,Clinical trials,Quality of reporting,Reporting guidelines,Standardized reporting},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Caulley et al_2020_Citation impact was highly variable for reporting guidelines of health research.pdf}
 }
 
 @misc{ChinaNationalKnowledge,
@@ -361,6 +396,67 @@
   file = {/Users/james/Zotero/storage/Y5XNE87B/www.imicams.ac.cn.html}
 }
 
+@book{cloughNarrativesFictionsEducational2002,
+  title = {Narratives and {{Fictions}} in {{Educational Research}}},
+  author = {Clough, Peter},
+  year = {2002},
+  publisher = {{Open University Press}},
+  abstract = {"In this bold and very important work, Peter Clough shows how the truths about educational issues can be told using fictional devices. This work legitimates the narrative turn in the human disciplines. He shows educational researchers how narrative inquiry can be used for progressive moral and political purposes". - Norman K. Denzin, University of Illinois at Urbana-Champaign  This compelling book takes a fresh approach to educational research, considering the role and use of literary and ethnographic approaches. There is growing interest in the use of narrative and fictional methods and this book sets out to:  * locate narrative and fictional methods within the traditions of education research;  * exemplify the use of narrative in studies of educational and social settings;  * explain the processes of composing narrative and fictional research  A distinctive feature of the book is the inclusion of five 'fictional' stories which demonstrate the use of narrative in reporting research. Detailed discussion of these five stories shows how they were created from actual events and the varied role of the author in their creation. The methodological implications of such an approach are considered along with its potential merits and difficulties and its possible uses.},
+  googlebooks = {eBMiAQAAIAAJ},
+  isbn = {978-0-335-20792-3},
+  langid = {english}
+}
+
+@article{coboEffectUsingReporting2011,
+  title = {Effect of Using Reporting Guidelines during Peer Review on Quality of Final Manuscripts Submitted to a Biomedical Journal: Masked Randomised Trial},
+  shorttitle = {Effect of Using Reporting Guidelines during Peer Review on Quality of Final Manuscripts Submitted to a Biomedical Journal},
+  author = {Cobo, E. and Cort{\'e}s, J. and Ribera, J. M. and Cardellach, F. and {Selva-O'Callaghan}, A. and Kostov, B. and Garc{\'i}a, L. and Cirugeda, L. and Altman, D. G. and Gonz{\'a}lez, J. A. and S{\`a}nchez, J. A. and Miras, F. and Urrutia, A. and Fonollosa, V. and {Rey-Joly}, C. and Vilardell, M.},
+  year = {2011},
+  month = nov,
+  journal = {BMJ},
+  volume = {343},
+  pages = {d6783},
+  publisher = {{British Medical Journal Publishing Group}},
+  issn = {0959-8138, 1468-5833},
+  doi = {10.1136/bmj.d6783},
+  urldate = {2023-09-22},
+  abstract = {Objective To investigate the effect of an additional review based on reporting guidelines such as STROBE and CONSORT on quality of manuscripts. Design Masked randomised trial. Population Original research manuscripts submitted to the Medicina Cl\'inica journal from May 2008 to April 2009 and considered suitable for publication. Intervention Control group: conventional peer reviews alone. Intervention group: conventional review plus an additional review looking for missing items from reporting guidelines. Outcomes Manuscript quality, assessed with a 5 point Likert scale (primary: overall quality; secondary: average quality of specific items in paper). Main analysis compared groups as allocated, after adjustment for baseline factors (analysis of covariance); sensitivity analysis compared groups as reviewed. Adherence to reviewer suggestions assessed with Likert scale. Results Of 126 consecutive papers receiving conventional review, 34 were not suitable for publication. The remaining 92 papers were allocated to receive conventional reviews alone (n=41) or additional reviews (n=51). Four papers assigned to the conventional review group deviated from protocol; they received an additional review based on reporting guidelines. We saw an improvement in manuscript quality in favour of the additional review group (comparison as allocated, 0.25, 95\% confidence interval \textendash 0.05 to 0.54; as reviewed, 0.33, 0.03 to 0.63). More papers with additional reviews than with conventional reviews alone improved from baseline (22 (43\%) v eight (20\%), difference 23.6\% (3.2\% to 44.0\%), number needed to treat 4.2 (from 2.3 to 31.2), relative risk 2.21 (1.10 to 4.44)). Authors in the additional review group adhered more to suggestions from conventional reviews than to those from additional reviews (average increase 0.43 Likert points (0.19 to 0.67)). Conclusions Additional reviews based on reporting guidelines improve manuscript quality, although the observed effect was smaller than hypothesised and not definitively demonstrated. Authors adhere more to suggestions from conventional reviews than to those from additional reviews, showing difficulties in adhering to high methodological standards at the latest research phases. To boost paper quality and impact, authors should be aware of future requirements of reporting guidelines at the very beginning of their study. Trial registration and protocol Although registries do not include trials of peer review, the protocol design was submitted to sponsored research projects (Instituto de Salud Carlos III, PI081903).},
+  chapter = {Research},
+  copyright = {\textcopyright{} Cobo et al 2011. This is an open-access article distributed under the terms of the Creative Commons Attribution Non-commercial License, which permits use, distribution, and reproduction in any medium, provided the original work is properly cited, the use is non commercial and is otherwise in compliance with the license. See: http://creativecommons.org/licenses/by-nc/2.0/  and  http://creativecommons.org/licenses/by-nc/2.0/legalcode.},
+  langid = {english},
+  pmid = {22108262},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Cobo et al_2011_Effect of using reporting guidelines during peer review on quality of final.pdf}
+}
+
+@article{coboStatisticalReviewersImprove2007,
+  title = {Statistical {{Reviewers Improve Reporting}} in {{Biomedical Articles}}: {{A Randomized Trial}}},
+  shorttitle = {Statistical {{Reviewers Improve Reporting}} in {{Biomedical Articles}}},
+  author = {Cobo, Erik and {Selva-O'Callagham}, Albert and Ribera, Josep-Maria and Cardellach, Francesc and Dominguez, Ruth and Vilardell, Miquel},
+  year = {2007},
+  month = mar,
+  journal = {PLoS ONE},
+  volume = {2},
+  number = {3},
+  pages = {e332},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0000332},
+  urldate = {2023-09-22},
+  abstract = {Background Although peer review is widely considered to be the most credible way of selecting manuscripts and improving the quality of accepted papers in scientific journals, there is little evidence to support its use. Our aim was to estimate the effects on manuscript quality of either adding a statistical peer reviewer or suggesting the use of checklists such as CONSORT or STARD to clinical reviewers or both. Methodology and Principal Findings Interventions were defined as 1) the addition of a statistical reviewer to the clinical peer review process, and 2) suggesting reporting guidelines to reviewers; with ``no statistical expert'' and ``no checklist'' as controls. The two interventions were crossed in a 2\texttimes 2 balanced factorial design including original research articles consecutively selected, between May 2004 and March 2005, by the Medicina Clinica (Barc) editorial committee. We randomized manuscripts to minimize differences in terms of baseline quality and type of study (intervention, longitudinal, cross-sectional, others). Sample-size calculations indicated that 100 papers provide an 80\% power to test a 55\% standardized difference. We specified the main outcome as the increment in quality of papers as measured on the Goodman Scale. Two blinded evaluators rated the quality of manuscripts at initial submission and final post peer review version. Of the 327 manuscripts submitted to the journal, 131 were accepted for further review, and 129 were randomized. Of those, 14 that were lost to follow-up showed no differences in initial quality to the followed-up papers. Hence, 115 were included in the main analysis, with 16 rejected for publication after peer review. 21 (18.3\%) of the 115 included papers were interventions, 46 (40.0\%) were longitudinal designs, 28 (24.3\%) cross-sectional and 20 (17.4\%) others. The 16 (13.9\%) rejected papers had a significantly lower initial score on the overall Goodman scale than accepted papers (difference 15.0, 95\% CI: 4.6\textendash 24.4). The effect of suggesting a guideline to the reviewers had no effect on change in overall quality as measured by the Goodman scale (0.9, 95\% CI: -0.3\textendash +2.1). The estimated effect of adding a statistical reviewer was 5.5 (95\% CI: 4.3\textendash 6.7), showing a significant improvement in quality. Conclusions and Significance This prospective randomized study shows the positive effect of adding a statistical reviewer to the field-expert peers in improving manuscript quality. We did not find a statistically significant positive effect by suggesting reviewers use reporting guidelines.},
+  pmcid = {PMC1824709},
+  pmid = {17389922},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Cobo et al_2007_Statistical Reviewers Improve Reporting in Biomedical Articles.pdf}
+}
+
+@misc{craigDevelopingEvaluatingComplex2021,
+  title = {Developing and Evaluating Complex Interventions},
+  author = {Craig, Peter and Dieppe, Paul and Macintyre, Sally and Michie, Susan and Nazareth, Irwin and Petticrew, Mark},
+  year = {2021},
+  publisher = {{Medical Research Council}},
+  urldate = {2021-12-10},
+  keywords = {\_tablet},
+  file = {/Users/james/Zotero/storage/C7P2835S/Craig et al_2021_Developing and evaluating complex interventions.pdf}
+}
+
 @misc{criticalappraisalskillsprogrammeCASPQualitativeChecklist2018,
   title = {{{CASP Qualitative Checklist}}},
   author = {Critical Appraisal Skills Programme},
@@ -371,6 +467,24 @@
   howpublished = {https://casp-uk.net/casp-tools-checklists/},
   langid = {american},
   file = {/Users/james/Zotero/storage/9Q7R7KH4/CASP-Qualitative-Checklist-2018_fillable_form.pdf}
+}
+
+@article{davidsonExerciseInterventionsLow2021,
+  title = {Exercise Interventions for Low Back Pain Are Poorly Reported: A Systematic Review},
+  shorttitle = {Exercise Interventions for Low Back Pain Are Poorly Reported},
+  author = {Davidson, Simon R. E. and Kamper, Steven J. and Haskins, Robin and Robson, Emma and Gleadhill, Connor and {da Silva}, Priscilla Viana and Williams, Amanda and Yu, Zhongming and Williams, Christopher M.},
+  year = {2021},
+  month = nov,
+  journal = {Journal of Clinical Epidemiology},
+  volume = {139},
+  pages = {279--286},
+  issn = {1878-5921},
+  doi = {10.1016/j.jclinepi.2021.05.020},
+  abstract = {OBJECTIVE: To assess the reporting quality of exercise interventions from clinical trials of low back pain (LBP). STUDY DESIGN AND SETTING: We conducted a systematic review to assess the reporting quality of randomised controlled trials (RCTs) that investigated the effectiveness of exercise interventions for patients with LBP. Five online databases and Clinical Trial Registries were searched (October 2018). We included RCTs that reported interventions for LBP, containing at least 50\% exercise. The Template for Intervention Description and Replication (TIDieR) and the Consensus on Exercise Reporting Template (CERT) reporting checklists were then used to assess quality of reporting. RESULTS: 582 trials were eligible for inclusion. Due to the large number of eligible studies, 100 studies were randomly selected for data extraction and coding with the TIDieR and CERT checklists. The random sample was representative of the 582 eligible trials. The overall completeness of reporting (median (IQR)) of TIDieR items was 59.2\% (45.5\%-72.7\%) and CERT was 33.3\% (22.2\%-52.6\%). CONCLUSIONS: We found poor overall reporting with both checklists, which has not improved over time or since the introduction of the checklists. More dedicated work is required to address poor reporting of exercise interventions in clinical trials.},
+  langid = {english},
+  pmid = {34091020},
+  keywords = {Adult,Biomedical Research,CERT,Clinical Trials as Topic,Data Accuracy,Exercise,Exercise Therapy,Female,Guidelines,Humans,Low back pain,Low Back Pain,Male,Middle Aged,Reporting quality,Research Design,Research Report,TIDieR},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Davidson et al_2021_Exercise interventions for low back pain are poorly reported.pdf}
 }
 
 @article{daviesFindingsNovelApproach2016,
@@ -556,6 +670,22 @@
   file = {/Users/james/Zotero/storage/N3ULDD54/Fang Z.-P. et al_2015_A survey on awareness of the ARRIVE guideline and GSPC in researchers field in.pdf}
 }
 
+@article{feinsteinClinicalBiostatisticsXXV1974,
+  title = {Clinical Biostatistics. {{XXV}}. {{A}} Survey of the Statistical Procedures in General Medical Journals},
+  author = {Feinstein, A. R.},
+  year = {1974},
+  month = jan,
+  journal = {Clinical Pharmacology and Therapeutics},
+  volume = {15},
+  number = {1},
+  pages = {97--107},
+  issn = {0009-9236},
+  doi = {10.1002/cpt197415197},
+  langid = {english},
+  pmid = {4808744},
+  keywords = {Analysis of Variance,Canada,Medicine,Periodicals as Topic,Statistics as Topic,United Kingdom,United States}
+}
+
 @article{fishbeinFactorsInfluencingBehavior2001,
   title = {Factors Influencing Behavior and Behavior Change},
   author = {Fishbein, Martin and Triandis, Harry C and Kanfer, Frederick H and Becker, Marshall and Middlestadt, Susan E and Eichler, Anita and others},
@@ -673,6 +803,42 @@
   pmid = {24411647}
 }
 
+@article{glasziouWhatMissingDescriptions2008,
+  title = {What Is Missing from Descriptions of Treatment in Trials and Reviews?},
+  author = {Glasziou, Paul and Meats, Emma and Heneghan, Carl and Shepperd, Sasha},
+  year = {2008},
+  month = jun,
+  journal = {BMJ},
+  volume = {336},
+  number = {7659},
+  pages = {1472--1474},
+  publisher = {{British Medical Journal Publishing Group}},
+  issn = {0959-8138, 1756-1833},
+  doi = {10.1136/bmj.39590.732037.47},
+  urldate = {2023-08-29},
+  abstract = {{$<$}p{$>$}Replicating non-pharmacological treatments in practice depends on how well they have been described in research studies{$<$}/p{$>$}},
+  chapter = {Analysis},
+  copyright = {\textcopyright{} BMJ Publishing Group Ltd 2008},
+  langid = {english},
+  pmid = {18583680},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Glasziou et al_2008_What is missing from descriptions of treatment in trials and reviews.pdf}
+}
+
+@article{glickInadequaciesReportingClinical1963,
+  title = {Inadequacies in the Reporting of Clinical Drug Research},
+  author = {Glick, B. S.},
+  year = {1963},
+  month = apr,
+  journal = {The Psychiatric Quarterly},
+  volume = {37},
+  pages = {234--244},
+  issn = {0033-2720},
+  doi = {10.1007/BF01562195},
+  langid = {english},
+  pmid = {13948469},
+  keywords = {Humans,Psychopharmacology,PSYCHOPHARMACOLOGY,Research,RESEARCH}
+}
+
 @misc{Guideline,
   title = {Guideline},
   urldate = {2023-01-10},
@@ -715,6 +881,27 @@
   urldate = {2021-03-01},
   howpublished = {https://indexmedicus.afro.who.int/},
   file = {/Users/james/Zotero/storage/GN4PPF26/indexmedicus.afro.who.int.html}
+}
+
+@article{hopewellEffectEditorsImplementation2012,
+  title = {Effect of Editors' Implementation of {{CONSORT}} Guidelines on the Reporting of Abstracts in High Impact Medical Journals: Interrupted Time Series Analysis},
+  shorttitle = {Effect of Editors' Implementation of {{CONSORT}} Guidelines on the Reporting of Abstracts in High Impact Medical Journals},
+  author = {Hopewell, Sally and Ravaud, Philippe and Baron, Gabriel and Boutron, Isabelle},
+  year = {2012},
+  month = jun,
+  journal = {BMJ},
+  volume = {344},
+  pages = {e4178},
+  publisher = {{British Medical Journal Publishing Group}},
+  issn = {1756-1833},
+  doi = {10.1136/bmj.e4178},
+  urldate = {2023-09-22},
+  abstract = {Objective To investigate the effect of the CONSORT for Abstracts guidelines, and different editorial policies used by five leading general medical journals to implement the guidelines, on the reporting quality of abstracts of randomised trials. Design Interrupted time series analysis. Sample We randomly selected up to 60 primary reports of randomised trials per journal per year from five high impact, general medical journals in 2006-09, if indexed in PubMed with an electronic abstract. We excluded reports that did not include an electronic abstract, and any secondary trial publications or economic analyses. We classified journals in three categories: those not mentioning the guidelines in their instructions to authors (JAMA and New England Journal of Medicine), those referring to the guidelines in their instructions to authors but with no specific policy to implement them (BMJ), and those referring to the guidelines in their instructions to authors with an active policy to implement them (Annals of Internal Medicine and Lancet). Two authors extracted data independently using the CONSORT for Abstracts checklist. Main outcome Mean number of CONSORT items reported in selected abstracts, among nine items reported in fewer than 50\% of the abstracts published across the five journals in 2006. Results We assessed 955 reports of abstracts of randomised trials. Journals with an active policy to enforce the guidelines showed an immediate increase in the level of mean number of items reported (increase of 1.50 items; P=0.0037). At 23 months after publication of the guidelines, the mean number of items reported per abstract for the primary outcome was 5.41 of nine items, a 53\% increase compared with the expected level estimated on the basis of pre-intervention trends. The change in level or trend did not increase in journals with no policy to enforce the guidelines (BMJ, JAMA, and New England Journal of Medicine). Conclusion Active implementation of the CONSORT for Abstracts guidelines by journals can lead to improvements in the reporting of abstracts of randomised trials.},
+  chapter = {Research},
+  copyright = {\textcopyright{} Hopewell et al 2012. This is an open-access article distributed under the terms of the Creative Commons Attribution Non-commercial License, which permits use, distribution, and reproduction in any medium, provided the original work is properly cited, the use is non commercial and is otherwise in compliance with the license. See: http://creativecommons.org/licenses/by-nc/2.0/  and  http://creativecommons.org/licenses/by-nc/2.0/legalcode.},
+  langid = {english},
+  pmid = {22730543},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Hopewell et al_2012_Effect of editors’ implementation of CONSORT guidelines on the reporting of.pdf}
 }
 
 @article{hopewellImpactWebbasedTool2016,
@@ -983,6 +1170,24 @@
   file = {/Users/james/Zotero/storage/VXRE5YAV/Malički et al_2021_Systematic review and meta-analyses of studies analysing instructions to.pdf;/Users/james/Zotero/storage/4KQ6YQUR/s41467-021-26027-y.html}
 }
 
+@article{malterudQualitativeResearchStandards2001,
+  title = {Qualitative Research: Standards, Challenges, and Guidelines},
+  shorttitle = {Qualitative Research},
+  author = {Malterud, K.},
+  year = {2001},
+  month = aug,
+  journal = {Lancet (London, England)},
+  volume = {358},
+  number = {9280},
+  pages = {483--488},
+  issn = {0140-6736},
+  doi = {10.1016/S0140-6736(01)05627-6},
+  abstract = {Qualitative research methods could help us to improve our understanding of medicine. Rather than thinking of qualitative and quantitative strategies as incompatible, they should be seen as complementary. Although procedures for textual interpretation differ from those of statistical analysis, because of the different type of data used and questions to be answered, the underlying principles are much the same. In this article I propose relevance, validity, and reflexivity as overall standards for qualitative inquiry. I will discuss the specific challenges in relation to reflexivity, transferability, and shared assumptions of interpretation, which are met by medical researchers who do this type of research, and I will propose guidelines for qualitative inquiry.},
+  langid = {english},
+  pmid = {11513933},
+  keywords = {Guidelines as Topic,Humans,Observation,Research,Research Design}
+}
+
 @article{malterudSampleSizeQualitative2016,
   title = {Sample {{Size}} in {{Qualitative Interview Studies}}: {{Guided}} by {{Information Power}}},
   shorttitle = {Sample {{Size}} in {{Qualitative Interview Studies}}},
@@ -1231,6 +1436,24 @@
   langid = {english},
   keywords = {\_tablet,Meta-analysis,QES-maybe,Reporting guidelines,Reproducibility,Systematic reviews,Transparency},
   file = {/Users/james/Zotero/storage/VTGE6BG5/Page et al_2021_Updating guidance for reporting systematic reviews.pdf;/Users/james/Zotero/storage/MQDKKPK5/S0895435621000408.html}
+}
+
+@article{pandisActiveImplementationStrategy2014,
+  title = {Active Implementation Strategy of {{CONSORT}} Adherence by a Dental Specialty Journal Improved Randomized Clinical Trial Reporting},
+  author = {Pandis, Nikolaos and Shamseer, Larissa and Kokich, Vincent G. and Fleming, Padhraig S. and Moher, David},
+  year = {2014},
+  month = sep,
+  journal = {Journal of Clinical Epidemiology},
+  volume = {67},
+  number = {9},
+  pages = {1044--1048},
+  publisher = {{Elsevier}},
+  issn = {0895-4356, 1878-5921},
+  doi = {10.1016/j.jclinepi.2014.04.001},
+  urldate = {2023-09-22},
+  langid = {english},
+  pmid = {24837296},
+  keywords = {CONSORT,CONSORT compliance,CONSORT implementation,Dental journal,Orthodontics,Reporting of RCTs}
 }
 
 @misc{PenelopeAi,
@@ -1734,6 +1957,24 @@
   pmid = {17941715},
   keywords = {Case-Control Studies,Cohort Studies,Cross-Sectional Studies,Epidemiologic Research Design,Guidelines as Topic,Observation,Publishing},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Vandenbroucke et al_2007_Strengthening the Reporting of Observational Studies in Epidemiology (STROBE)2.pdf}
+}
+
+@article{vilaroAdherenceReportingGuidelines2019,
+  title = {Adherence to Reporting Guidelines Increases the Number of Citations: The Argument for Including a Methodologist in the Editorial Process and Peer-Review},
+  shorttitle = {Adherence to Reporting Guidelines Increases the Number of Citations},
+  author = {Vilar{\'o}, Marta and Cort{\'e}s, Jordi and {Selva-O'Callaghan}, Albert and Urrutia, Agust{\'i}n and Ribera, Josep-Maria and Cardellach, Francesc and Basaga{\~n}a, Xavier and Elmore, Matthew and Vilardell, Miquel and Altman, Douglas and Gonz{\'a}lez, Jos{\'e}-Antonio and Cobo, Erik},
+  year = {2019},
+  month = may,
+  journal = {BMC Medical Research Methodology},
+  volume = {19},
+  pages = {112},
+  issn = {1471-2288},
+  doi = {10.1186/s12874-019-0746-4},
+  urldate = {2023-09-22},
+  abstract = {Background From 2005 to 2010, we conducted 2 randomized studies on a journal (Medicina Cl\'inica), where we took manuscripts received for publication and randomly assigned them to either the standard editorial process or to additional processes. Both studies were based on the use of methodological reviewers and reporting guidelines (RG). Those interventions slightly improved the items reported on the Manuscript Quality Assessment Instrument (MQAI), which assesses the quality of the research report. However, masked evaluators were able to guess the allocated group in 62\% (56/90) of the papers, thus presenting a risk of detection bias. In this post-hoc study, we analyse whether those interventions that were originally designed for improving the completeness of manuscript reporting may have had an effect on the number of citations, which is the measured outcome that we used. Methods Masked to the intervention group, one of us used the Web of Science (WoS) to quantify the number of citations that the participating manuscripts received up December 2016. We calculated the mean citation ratio between intervention arms and then quantified the uncertainty of it by means of the Jackknife method, which avoids assumptions about the distribution shape. Results Our study included 191 articles (99 and 92, respectively) from the two previous studies, which all together received 1336 citations. In both studies, the groups subjected to additional processes showed higher averages, standard deviations and annual rates. The intervention effect was similar in both studies, with a combined estimate of a 43\% (95\% CI: 3 to 98\%) increase in the number of citations. Conclusions We interpret that those effects are driven mainly by introducing into the editorial process a senior methodologist to find missing RG items. Those results are promising, but not definitive due to the exploratory nature of the study and some important caveats such as: the limitations of using the number of citations as a measure of scientific impact; and the fact that our study is based on a single journal. We invite journals to perform their own studies to ascertain whether or not scientific repercussion is increased by adhering to reporting guidelines and further involving statisticians in the editorial process. Electronic supplementary material The online version of this article (10.1186/s12874-019-0746-4) contains supplementary material, which is available to authorized users.},
+  pmcid = {PMC6544961},
+  pmid = {31151417},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Vilaró et al_2019_Adherence to reporting guidelines increases the number of citations.pdf}
 }
 
 @misc{VIPChineseMedical,
